--- a/style.css
+++ b/style.css
@@ -1,14 +1,13 @@
 body, html {
-    background-color: rgb(0, 12, 68);
+	margin: 0;
+	padding: 0;
+	overflow: hidden;
+	width: 100%;
+	height: 100%;
 }
 
-
-#debug {
-    color: rgb(192, 192, 192);
-	position: absolute;
-	top: 10px;
+#phaser-game {
+	display: block;
 	width: 100%;
-	text-align: center;
-	z-index: 100;
-	display:block;
+	height: 100%;
 }
